--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -105,12 +105,17 @@
       "upcoming": "Upcoming"
     },
     "tapToSignUp": "Tap to sign up",
+    "title": "Calendar",
+    "todayButton": "Today",
     "today": {
       "empty": {
         "description": "You have no scheduled events for today.",
         "title": "No Events Today"
       }
     },
+    "eventsCount": "{{count}} event",
+    "eventsCount_plural": "{{count}} events",
+    "noEvents": "No events scheduled",
     "unsignup": "Cancel Attendance",
     "upcoming": {
       "empty": {
@@ -744,37 +749,65 @@
   },
   "shifts": {
     "all_shifts": "All Shifts",
+    "already_signed_up": "Already Signed Up",
+    "available": "Available",
     "calendar": "Calendar",
+    "current_signups": "Current Sign-ups",
     "day_details": "Shift Day Details",
     "details": "Shift Details",
     "end_time": "End Time",
     "groups": "Groups",
     "in_shift": "In Shift",
     "loading": "Loading shifts...",
+    "loading_details": "Loading shift details...",
     "loading_signup": "Processing...",
+    "needed": "Needed",
     "needs": "Needs",
     "next_day": "Next Day",
+    "no_positions_available": "No positions available for signup",
     "no_shifts": "No shifts available",
+    "no_shifts_description": "Contact your supervisor if you believe you should have shift assignments",
     "no_shifts_today": "No shifts scheduled for today",
+    "no_shifts_today_description": "Check back later or contact your supervisor for shift assignments",
+    "no_signups_yet": "No sign-ups yet",
     "personnel_count": "Personnel Count",
+    "position_needs": "Position Needs",
+    "roles": "Roles",
     "scheduled_for": "Scheduled for",
     "search_placeholder": "Search shifts...",
     "shift_code": "Shift Code",
     "shift_day": "Shift Day",
     "shift_name": "Shift Name",
-    "shift_type": "Shift Type",
+    "shift_type": {
+      "label": "Shift Type",
+      "regular": "Regular",
+      "emergency": "Emergency",
+      "training": "Training",
+      "unknown": "Unknown"
+    },
     "signed_up": "Signed Up",
     "signup": "Sign Up",
     "signup_error": "Failed to sign up for shift",
+    "signup_status": "Sign-up Status",
     "signup_success": "Successfully signed up for shift",
     "signups": "Sign-ups",
     "start_time": "Start Time",
     "today": "Today",
     "todays_shifts": "Today's Shifts",
+    "type_emergency": "Emergency",
+    "type_regular": "Regular", 
+    "type_training": "Training",
+    "type_unknown": "Unknown",
     "withdraw": "Withdraw",
     "withdraw_error": "Failed to withdraw from shift",
     "withdraw_success": "Successfully withdrew from shift",
-    "you_are_signed_up": "You are signed up for this shift"
+    "you": "You",
+    "you_are_signed_up": "You are signed up for this shift",
+    "manual": "Manual",
+    "automatic": "Automatic",
+    "optional": "Optional",
+    "required": "Required",
+    "unknown": "Unknown"
   },
   "sidebar": {
     "audio": "Stream",
