CU-868ex18rd Fixing test and tsc issues.

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -79,11 +79,14 @@
       "attendanceUpdate": "فشل في تحديث الحضور. حاول مرة أخرى.",
       "title": "خطأ"
     },
+    "eventsCount": "{{count}} حدث",
+    "eventsCount_plural": "{{count}} أحداث",
     "loading": {
       "date": "جاري تحميل أحداث التاريخ المحدد...",
       "today": "جاري تحميل أحداث اليوم...",
       "upcoming": "جاري تحميل الأحداث القادمة..."
     },
+    "noEvents": "لا توجد أحداث مجدولة",
     "optional": "اختياري",
     "required": "مطلوب",
     "selectDate": "اختر تاريخاً لعرض الأحداث",
@@ -112,9 +115,7 @@
         "title": "لا توجد أحداث اليوم"
       }
     },
-    "eventsCount": "{{count}} حدث",
-    "eventsCount_plural": "{{count}} أحداث",
-    "noEvents": "لا توجد أحداث مجدولة",
+    "todayButton": "اليوم",
     "unsignup": "إلغاء الحضور",
     "upcoming": {
       "empty": {
@@ -289,6 +290,7 @@
     "no_open_calls": "لا توجد مكالمات مفتوحة متاحة",
     "note": "ملاحظة",
     "note_placeholder": "أدخل ملاحظة المكالمة",
+    "personnel": "الأشخاص",
     "plus_code": "رمز Plus",
     "plus_code_found": "تم العثور على رمز Plus وتم تحديث الموقع",
     "plus_code_geocoding_error": "فشل في البحث عن رمز Plus، يرجى المحاولة مرة أخرى",
@@ -572,6 +574,7 @@
     "no_messages_description": "أرسل رسالتك الأولى للبدء",
     "no_subject": "بدون موضوع",
     "note_optional": "ملاحظة (اختيارية)",
+    "people": "الأشخاص",
     "recipients": "المستقبلين",
     "recipients_count": "{{count}} مستقبل",
     "recipients_required": "مطلوب مستقبل واحد على الأقل",
@@ -626,6 +629,15 @@
     "message": "مرحبًا بك في تطبيق obytes"
   },
   "personnel": {
+    "empty": "لم يتم العثور على أي شخص",
+    "emptyDescription": "لا يتطابق أي شخص مع معايير البحث أو لا توجد بيانات شخصية متاحة.",
+    "filter": {
+      "description": "اختر المرشحات لتحسين قائمة الأشخاص. يتم تطبيق التغييرات تلقائياً.",
+      "empty": "لا توجد خيارات مرشحات متاحة",
+      "emptyDescription": "ستظهر خيارات المرشحات هنا عند توفرها.",
+      "title": "تصفية الأشخاص"
+    },
+    "search": "بحث في الأشخاص...",
     "status": {
       "add_note": "إضافة ملاحظة",
       "calls_tab": "المكالمات",
@@ -737,36 +749,64 @@
   },
   "shifts": {
     "all_shifts": "كل النوبات",
+    "already_signed_up": "مسجل بالفعل",
+    "automatic": "تلقائي",
+    "available": "متاح",
     "calendar": "التقويم",
+    "current_signups": "التسجيلات الحالية",
     "day_details": "تفاصيل يوم النوبة",
     "details": "تفاصيل النوبة",
     "end_time": "وقت الانتهاء",
     "groups": "المجموعات",
     "in_shift": "في النوبة",
     "loading": "جاري تحميل النوبات...",
+    "loading_details": "جاري تحميل تفاصيل النوبة...",
     "loading_signup": "جاري المعالجة...",
+    "manual": "يدوي",
+    "needed": "مطلوب",
     "needs": "الاحتياجات",
     "next_day": "اليوم التالي",
+    "no_positions_available": "لا توجد مناصب متاحة للتسجيل",
     "no_shifts": "لا توجد نوبات متاحة",
+    "no_shifts_description": "تواصل مع مشرفك إذا كنت تعتقد أن لديك مهام نوبات",
     "no_shifts_today": "لا توجد نوبات مجدولة لليوم",
+    "no_shifts_today_description": "تحقق مرة أخرى لاحقاً أو تواصل مع مشرفك لمهام النوبات",
+    "no_signups_yet": "لا توجد تسجيلات بعد",
+    "optional": "اختياري",
     "personnel_count": "عدد الأفراد",
+    "position_needs": "احتياجات المنصب",
+    "required": "مطلوب",
+    "roles": "الأدوار",
     "scheduled_for": "مجدولة لـ",
     "search_placeholder": "البحث في النوبات...",
     "shift_code": "كود النوبة",
     "shift_day": "يوم النوبة",
     "shift_name": "اسم النوبة",
-    "shift_type": "نوع النوبة",
+    "shift_type": {
+      "emergency": "طوارئ",
+      "label": "نوع النوبة",
+      "regular": "عادي",
+      "training": "تدريب",
+      "unknown": "غير معروف"
+    },
     "signed_up": "مسجل",
     "signup": "التسجيل",
     "signup_error": "فشل في التسجيل للنوبة",
+    "signup_status": "حالة التسجيل",
     "signup_success": "تم التسجيل بنجاح للنوبة",
     "signups": "التسجيلات",
     "start_time": "وقت البداية",
     "today": "اليوم",
     "todays_shifts": "نوبات اليوم",
+    "type_emergency": "طوارئ",
+    "type_regular": "عادي",
+    "type_training": "تدريب",
+    "type_unknown": "غير معروف",
+    "unknown": "غير معروف",
     "withdraw": "الانسحاب",
     "withdraw_error": "فشل في الانسحاب من النوبة",
     "withdraw_success": "تم الانسحاب بنجاح من النوبة",
+    "you": "أنت",
     "you_are_signed_up": "أنت مسجل في هذه النوبة"
   },
   "sidebar": {
