--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -79,11 +79,14 @@
       "attendanceUpdate": "Error al actualizar asistencia. Inténtalo de nuevo.",
       "title": "Error"
     },
+    "eventsCount": "{{count}} evento",
+    "eventsCount_plural": "{{count}} eventos",
     "loading": {
       "date": "Cargando eventos para la fecha seleccionada...",
       "today": "Cargando eventos de hoy...",
       "upcoming": "Cargando eventos próximos..."
     },
+    "noEvents": "No hay eventos programados",
     "optional": "Opcional",
     "required": "Requerido",
     "selectDate": "Selecciona una fecha para ver eventos",
@@ -112,9 +115,7 @@
         "title": "Sin Eventos Hoy"
       }
     },
-    "eventsCount": "{{count}} evento",
-    "eventsCount_plural": "{{count}} eventos",
-    "noEvents": "No hay eventos programados",
+    "todayButton": "Hoy",
     "unsignup": "Cancelar Asistencia",
     "upcoming": {
       "empty": {
@@ -289,6 +290,7 @@
     "no_open_calls": "No hay llamadas abiertas disponibles",
     "note": "Nota",
     "note_placeholder": "Introduce la nota de la llamada",
+    "personnel": "Personas",
     "plus_code": "Código Plus",
     "plus_code_found": "Código plus encontrado y ubicación actualizada",
     "plus_code_geocoding_error": "Error al buscar el código plus, intente nuevamente",
@@ -572,6 +574,7 @@
     "no_messages_description": "Envía tu primer mensaje para comenzar",
     "no_subject": "Sin Asunto",
     "note_optional": "Nota (Opcional)",
+    "people": "Personas",
     "recipients": "Destinatarios",
     "recipients_count": "{{count}} destinatarios",
     "recipients_required": "Se requiere al menos un destinatario",
@@ -626,6 +629,15 @@
     "message": "Bienvenido al sitio de la aplicación obytes"
   },
   "personnel": {
+    "empty": "No se encontró personal",
+    "emptyDescription": "Ningún personal coincide con tus criterios de búsqueda o no hay datos de personal disponibles.",
+    "filter": {
+      "description": "Selecciona filtros para refinar la lista de personal. Los cambios se aplican automáticamente.",
+      "empty": "No hay opciones de filtro disponibles",
+      "emptyDescription": "Las opciones de filtro aparecerán aquí cuando estén disponibles.",
+      "title": "Filtrar Personal"
+    },
+    "search": "Buscar personal...",
     "status": {
       "add_note": "Agregar Nota",
       "calls_tab": "Llamadas",
@@ -737,36 +749,64 @@
   },
   "shifts": {
     "all_shifts": "Todos los Turnos",
+    "already_signed_up": "Ya Registrado",
+    "automatic": "Automático",
+    "available": "Disponible",
     "calendar": "Calendario",
+    "current_signups": "Registros Actuales",
     "day_details": "Detalles del Día de Turno",
     "details": "Detalles del Turno",
     "end_time": "Hora de Fin",
     "groups": "Grupos",
     "in_shift": "En Turno",
     "loading": "Cargando turnos...",
+    "loading_details": "Cargando detalles del turno...",
     "loading_signup": "Procesando...",
+    "manual": "Manual",
+    "needed": "Necesario",
     "needs": "Necesidades",
     "next_day": "Próximo Día",
+    "no_positions_available": "No hay posiciones disponibles para registro",
     "no_shifts": "No hay turnos disponibles",
+    "no_shifts_description": "Contacta a tu supervisor si crees que deberías tener asignaciones de turnos",
     "no_shifts_today": "No hay turnos programados para hoy",
+    "no_shifts_today_description": "Vuelve a consultar más tarde o contacta a tu supervisor para asignaciones de turnos",
+    "no_signups_yet": "Aún no hay inscripciones",
+    "optional": "Opcional",
     "personnel_count": "Cantidad de Personal",
+    "position_needs": "Necesidades de Posición",
+    "required": "Requerido",
+    "roles": "Roles",
     "scheduled_for": "Programado para",
     "search_placeholder": "Buscar turnos...",
     "shift_code": "Código de Turno",
     "shift_day": "Día de Turno",
     "shift_name": "Nombre del Turno",
-    "shift_type": "Tipo de Turno",
+    "shift_type": {
+      "emergency": "Emergencia",
+      "label": "Tipo de Turno",
+      "regular": "Regular",
+      "training": "Entrenamiento",
+      "unknown": "Desconocido"
+    },
     "signed_up": "Inscrito",
     "signup": "Inscribirse",
     "signup_error": "Error al inscribirse en el turno",
+    "signup_status": "Estado de Inscripción",
     "signup_success": "Se inscribió exitosamente en el turno",
     "signups": "Inscripciones",
     "start_time": "Hora de Inicio",
     "today": "Hoy",
     "todays_shifts": "Turnos de Hoy",
+    "type_emergency": "Emergencia",
+    "type_regular": "Regular",
+    "type_training": "Entrenamiento",
+    "type_unknown": "Desconocido",
+    "unknown": "Desconocido",
     "withdraw": "Retirarse",
     "withdraw_error": "Error al retirarse del turno",
     "withdraw_success": "Se retiró exitosamente del turno",
+    "you": "Tú",
     "you_are_signed_up": "Estás inscrito en este turno"
   },
   "sidebar": {
