CU-868ex18rd Working on geolocation issue minor fixes.

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -523,6 +523,7 @@
       "message": "يرجى التحقق من اسم المستخدم وكلمة المرور والمحاولة مرة أخرى.",
       "title": "فشل تسجيل الدخول"
     },
+    "change_server_url": "تغيير عنوان URL للخادم",
     "login": "تسجيل الدخول",
     "login_button": "تسجيل الدخول",
     "login_button_description": "قم بتسجيل الدخول إلى حسابك للمتابعة",
