--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -523,6 +523,7 @@
       "message": "Please check your username and password and try again.",
       "title": "Login Failed"
     },
+    "change_server_url": "Change Server URL",
     "login": "Login",
     "login_button": "Login",
     "login_button_description": "Login to your account to continue",
