--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -131,13 +131,16 @@
     "error": "خطأ في الحصول على الصور",
     "failed_to_load": "فشل في تحميل الصورة",
     "image_name": "اسم الصورة",
+    "image_note": "ملاحظة الصورة",
     "loading": "جاري التحميل...",
     "no_images": "لا توجد صور متاحة",
     "no_images_description": "أضف صورًا إلى مكالمتك للمساعدة في التوثيق والتواصل",
     "select_from_gallery": "اختر من المعرض",
     "take_photo": "التقط صورة",
     "title": "صور المكالمة",
-    "upload": "رفع"
+    "upload": "رفع",
+    "upload_error": "فشل في رفع الصورة. يرجى المحاولة مرة أخرى.",
+    "upload_success": "تم رفع الصورة بنجاح"
   },
   "callNotes": {
     "addNote": "إضافة ملاحظة",
