--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -350,6 +350,8 @@
     "loading": "جاري التحميل...",
     "navigation": "التنقل",
     "next": "التالي",
+    "no_data_available": "لا توجد بيانات متاحة",
+    "no_results_found": "لم يتم العثور على نتائج",
     "noActiveUnit": "لم يتم تعيين وحدة نشطة",
     "noActiveUnitDescription": "يرجى تعيين وحدة نشطة من صفحة الإعدادات للوصول إلى عناصر التحكم في الحالة",
     "no_unit_selected": "لم يتم اختيار وحدة",
@@ -360,6 +362,7 @@
     "retry": "إعادة المحاولة",
     "route": "مسار",
     "save": "حفظ",
+    "search": "بحث",
     "step": "خطوة",
     "submit": "إرسال",
     "submitting": "جاري الإرسال...",
