--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -350,6 +350,8 @@
     "loading": "Loading",
     "navigation": "Navigation",
     "next": "Next",
+    "no_data_available": "No data available",
+    "no_results_found": "No results found",
     "noActiveUnit": "No Active Unit",
     "noActiveUnitDescription": "Please select an active unit to see available statuses",
     "no_unit_selected": "No Unit Selected",
@@ -360,6 +362,7 @@
     "retry": "Retry",
     "route": "Route",
     "save": "Save",
+    "search": "Search",
     "step": "Step",
     "submit": "Submit",
     "submitting": "Submitting...",
