--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -350,6 +350,8 @@
     "loading": "Cargando...",
     "navigation": "Navegación",
     "next": "Siguiente",
+    "no_data_available": "No hay datos disponibles",
+    "no_results_found": "No se encontraron resultados",
     "noActiveUnit": "No hay unidad activa establecida",
     "noActiveUnitDescription": "Por favor establezca una unidad activa desde la página de configuración para acceder a los controles de estado",
     "no_unit_selected": "Ninguna unidad seleccionada",
@@ -360,6 +362,7 @@
     "retry": "Reintentar",
     "route": "Ruta",
     "save": "Guardar",
+    "search": "Buscar",
     "step": "Paso",
     "submit": "Enviar",
     "submitting": "Enviando...",
