--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -638,6 +638,22 @@
     "search": "Buscar notas...",
     "title": "Notas"
   },
+  "notifications": {
+    "bulkDeleteError": "Error al eliminar las notificaciones",
+    "bulkDeleteSuccess": "{{count}} notificación{{count, plural, one {} other {es}}} eliminada{{count, plural, one {} other {s}}}",
+    "confirmDelete": {
+      "message": "¿Estás seguro de que quieres eliminar {{count}} notificación{{count, plural, one {} other {es}}}? Esta acción no se puede deshacer.",
+      "title": "Confirmar Eliminación"
+    },
+    "deleteError": "Error al eliminar la notificación",
+    "deleteSuccess": "Notificación eliminada",
+    "deselectAll": "Deseleccionar Todo",
+    "empty": "No hay actualizaciones disponibles",
+    "loadError": "No se pueden cargar las notificaciones",
+    "selectAll": "Seleccionar Todo",
+    "selectedCount": "{{count}} seleccionadas",
+    "title": "Notificaciones"
+  },
   "onboarding": {
     "message": "Bienvenido al sitio de la aplicación obytes"
   },
